--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Iris Data set Tensorflow \n",
-    "\n",
-    "First we need to import our dependencies"
+    "\n"
    ]
   },
   {
@@ -294,13 +293,7 @@
       "75/75 [==============================] - 0s 3ms/step - loss: 0.1721 - acc: 0.9733\n",
       "Epoch 85/100\n",
       "75/75 [==============================] - 0s 3ms/step - loss: 0.1736 - acc: 0.9733\n",
-      "Epoch 86/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 86/100\n",
       "75/75 [==============================] - 0s 4ms/step - loss: 0.1670 - acc: 0.9733\n",
       "Epoch 87/100\n",
       "75/75 [==============================] - 0s 4ms/step - loss: 0.1636 - acc: 0.9867\n",
