--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -295,13 +295,7 @@
       "75/75 [==============================] - 0s 4ms/step - loss: 0.1787 - acc: 0.9600\n",
       "Epoch 86/100\n",
       "75/75 [==============================] - 0s 4ms/step - loss: 0.1792 - acc: 0.9733\n",
-      "Epoch 87/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 87/100\n",
       "75/75 [==============================] - 0s 4ms/step - loss: 0.1770 - acc: 0.9467\n",
       "Epoch 88/100\n",
       "75/75 [==============================] - 0s 3ms/step - loss: 0.1749 - acc: 0.9600\n",
@@ -373,8 +367,8 @@
     "print(\"That means it's a %s\" % outputs_vals[prediction.astype(np.bool)][0])\n",
     "\n",
     "# Save the model to a file for later use.\n",
-    "model.save(\"iris_nn.h5\")\n",
-    "# Load the model again with: model = load_model(\"iris_nn.h5\")"
+    "model.save(\"./data/iris_nn.h5\")\n",
+    "# Load the model again with: model = load_model(\"./data/iris_nn.h5\")"
    ]
   },
   {
