--- a/iris-keras.ipynb
+++ b/iris-keras.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tensorflow / Keras Iris Data set problem solution\n",
     "\n",
-    "In the following Jupyter notebook file we will create a visual representation of the Iris data set. I will walk you through this problem set as if you were a\n",
+    "In the following Jupyter notebook file we will create a visual representation of the Iris data set. I will walk you through this problem set as if you were a novice programmer.\n",
     "\n",
     "##### What is the Iris data set you ask?\n",
     "\n",
@@ -44,6 +44,8 @@
     }
    ],
    "source": [
+    "# Reference: https://github.com/emerging-technologies/keras-iris\n",
+    "\n",
     "import csv\n",
     "import numpy as np\n",
     "import keras as kr "
@@ -462,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now with all that done we pick out a piece of data and check to see if we can predict accurately, Which it has, as shown above the Accuracy is roughly 98 - 99% which is a great result.\n",
+    "Now with all that done we pick out a piece of data and check to see if we can predict accurately, Which it has, as shown above the Accuracy is roughly 97 - 98% which is a great result.\n",
     "\n",
     "# End"
    ]
